--- a/demo/verify.ejs
+++ b/demo/verify.ejs
@@ -18,7 +18,7 @@
 
   <!-- HERO SECTION (same as index page) -->
   <div class="container py-4">
-    <div class="row g-3">
+    <div class="row g-3">.
 
       <div class="col-6 col-md-4">
         <img src="/img/couple1.jpeg" class="img-fluid rounded shadow-sm" />
