--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,27 +22,27 @@
 
       <!-- 6 images -->
       <div class="col-6 col-md-4">
-        <img src="/img/couple1.jpeg" class="img-fluid rounded shadow-sm" />
+        <img src="https://firebasestorage.googleapis.com/v0/b/videohub-a1679.appspot.com/o/couple1.jpeg?alt=media&token=c831d30c-6d4a-4d38-8eba-61855bc58af3" class="img-fluid rounded shadow-sm" />
       </div>
 
       <div class="col-6 col-md-4">
-        <img src="/img/couple2.jpeg" class="img-fluid rounded shadow-sm" />
+        <img src="https://firebasestorage.googleapis.com/v0/b/videohub-a1679.appspot.com/o/couple2.jpeg?alt=media&token=79b080f3-bf47-476f-badd-b080ea1094bb" class="img-fluid rounded shadow-sm" />
       </div>
 
       <div class="col-6 col-md-4">
-        <img src="/img/couple3.jpeg" class="img-fluid rounded shadow-sm" />
+        <img src="https://firebasestorage.googleapis.com/v0/b/videohub-a1679.appspot.com/o/couple3.jpeg?alt=media&token=4bb2040a-6ffd-4d6f-b694-2d996267769c" class="img-fluid rounded shadow-sm" />
       </div>
 
       <div class="col-6 col-md-4">
-        <img src="/img/couple4.jpeg" class="img-fluid rounded shadow-sm" />
+        <img src="https://firebasestorage.googleapis.com/v0/b/videohub-a1679.appspot.com/o/couple4.jpeg?alt=media&token=f355971d-6a06-46d9-93c3-2c957fa2a311" class="img-fluid rounded shadow-sm" />
       </div>
 
       <div class="col-6 col-md-4">
-        <img src="/img/couple5.jpg" class="img-fluid rounded shadow-sm" />
+        <img src="https://firebasestorage.googleapis.com/v0/b/videohub-a1679.appspot.com/o/couple5.jpg?alt=media&token=597fd7f6-022d-49c0-b86c-8a2d30ac16dc" class="img-fluid rounded shadow-sm" />
       </div>
 
       <div class="col-6 col-md-4">
-        <img src="/img/couple6.jpg" class="img-fluid rounded shadow-sm" />
+        <img src="https://firebasestorage.googleapis.com/v0/b/videohub-a1679.appspot.com/o/couple6.jpg?alt=media&token=c14af9bd-4088-4a4e-a82a-6dd16a1c32e4" class="img-fluid rounded shadow-sm" />
       </div>
 
     </div>
@@ -107,7 +107,7 @@
     </div>
   </div>
 
-
+ 
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
