--- a/views/index.ejs
+++ b/views/index.ejs
@@ -94,7 +94,9 @@
 
         <div class="mb-3">
           <label class="form-label">Phone Number</label>
-          <input type="text" name="phone" class="form-control" required />
+          <input type="text" name="phone"
+          placeholder="2348025543276"
+          class="form-control" required />
         </div>
 
         <input type="hidden" name="location" value="Akera" />
