--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,12 @@
   />
 
   <link rel="stylesheet" href="/css/styles.css" />
+  <style>
+    input::placeholder {
+  color: transparent;
+}
+
+  </style>
 </head>
 
 <body class="bg-light">
@@ -94,9 +100,8 @@
 
         <div class="mb-3">
           <label class="form-label">Phone Number</label>
-          <input type="text" name="phone"
-          placeholder="2348025543276"
-          class="form-control" required />
+          <input  type="text" name="phone" class="form-control" placeholder="2348025543276" value="">
+
           
         </div>
 
